Fix player performance